k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unmapped
  labels:
    app.kubernetes.io/name: unmapped
    app.kubernetes.io/managed-by: kubectl
